--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="project-content">
           <h2 class="project-title">Project 1</h2>
           <p class="project-description">An innovative solution showcasing my skills in web development and design.</p>
-          <a href="project1/" class="project-link project-link-1">View Project</a>
+          <a href="Gemini Clone/index.html" class="project-link project-link-1">View Project</a>
         </div>
       </div>
 
@@ -167,7 +167,7 @@
         <div class="project-content">
           <h2 class="project-title">Project 2</h2>
           <p class="project-description">An interactive game application demonstrating my programming creativity.</p>
-          <a href="project2/" class="project-link project-link-2">View Project</a>
+          <a href="QR Generator/index.html" class="project-link project-link-2">View Project</a>
         </div>
       </div>
 
@@ -179,7 +179,7 @@
         <div class="project-content">
           <h2 class="project-title">Project 3</h2>
           <p class="project-description">An experimental project pushing boundaries with new technologies.</p>
-          <a href="project3/" class="project-link project-link-3">View Project</a>
+          <a href="Responsive NFT Website/index.html" class="project-link project-link-3">View Project</a>
         </div>
       </div>
     </div>
