--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         <div class="project-content">
           <h2 class="project-title">Gemini Clone</h2>
           <p class="project-description">A responsive clone of the Gemini AI interface with interactive elements.</p>
-          <a href="Gemini Clone/index.html" class="project-link project-link-1">View Project</a>
+          <a href="MyPojects/Gemini Clone/index.html" class="project-link project-link-1">View Project</a>
         </div>
       </div>
 
@@ -214,7 +214,7 @@
         <div class="project-content">
           <h2 class="project-title">QR Generator</h2>
           <p class="project-description">A dynamic QR code generator with customizable options and download feature.</p>
-          <a href="QR Generator/index.html" class="project-link project-link-2">View Project</a>
+          <a href="MyPojects/QR Generator/index.html" class="project-link project-link-2">View Project</a>
         </div>
       </div>
 
@@ -226,7 +226,7 @@
         <div class="project-content">
           <h2 class="project-title">NFT Website</h2>
           <p class="project-description">A responsive NFT marketplace with modern design and smooth animations.</p>
-          <a href="Responsive NFT Website/index.html" class="project-link project-link-3">View Project</a>
+          <a href="MyPojects/Responsive NFT Website/index.html" class="project-link project-link-3">View Project</a>
         </div>
       </div>
 
@@ -238,7 +238,7 @@
         <div class="project-content">
           <h2 class="project-title">Pixuale Art</h2>
           <p class="project-description">Pixuale Generator with Cool design.</p>
-          <a href="#" class="project-link project-link-4">Check is out</a>
+          <a href="MyPojects /Pixule art/index.html" class="project-link project-link-4">Check is out</a>
         </div>
       </div>
 
