--- a/index.html
+++ b/index.html
@@ -266,6 +266,17 @@
         </div>
       </div>
 
+      <div class="project-card">
+        <div class="project-header project-header-1">
+          <span class="project-emoji">😎</span>
+        </div>
+        <div class="project-content">
+          <h2 class="project-title">YBS APP AI Assistance</h2>
+          <p class="project-description">YBS APP AI Assistance </p>
+        <a href="HTML%20Resume/" class="project-link project-link-1">View Project</a>
+        </div>
+      </div>
+
       <!-- Project 6 (Example new project) -->
       <!-- <div class="project-card">
         <div class="project-header project-header-6">
