--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
         <div class="project-content">
           <h2 class="project-title">YBS APP AI Assistance</h2>
           <p class="project-description">YBS APP AI Assistance </p>
-        <a href="HTML%20Resume/" class="project-link project-link-1">View Project</a>
+        <a href="YBS%20Projects/" class="project-link project-link-1">View Project</a>
         </div>
       </div>
 
