--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <div class="project-content">
           <h2 class="project-title">Hanami</h2>
           <p class="project-description">Crate at 2025/6/3 </p>
-        <a href="Hanami%20/" class="project-link project-link-1">View Project</a>
+<a href="Hanami/index.html" class="project-link project-link-1">View Project</a>
         </div>
       </div>
       <!-- Project 6 (Example new project) -->
