Final fixed maybe

--- a/HTML Resume/recentActive.html
+++ b/HTML Resume/recentActive.html
@@ -229,7 +229,7 @@
         </div>
         
         <div class="project-actions">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary disable">
                 <i class="fas fa-bullhorn"></i>
                 Current Build
             </button>
