Final fixed maybe

--- a/HTML Resume/recentActive.html
+++ b/HTML Resume/recentActive.html
@@ -231,7 +231,7 @@
         <div class="project-actions">
             <button class="btn btn-primary disable">
                 <i class="fas fa-bullhorn"></i>
-                Current Build
+                Live Demo
             </button>
                 <button class="btn btn-secondary"
                   onclick="window.open('https://github.com/AungThatZin/Announcement-System-in-Telegram', '_blank')">
