Final fixed maybe

--- a/HTML Resume/recentActive.html
+++ b/HTML Resume/recentActive.html
@@ -179,8 +179,8 @@
                     <div class="project-card" data-category="web">
                         <img src="img/AIToolProject.png" class="project-thumb">
                         <div class="project-content">
-                            <h3 class="project-title">Banking System</h3>
-                            <p class="project-description">Secure banking application with transaction processing, account management, and admin dashboard.</p>
+                            <h3 class="project-title">AI Tool Generator</h3>
+                            <p class="project-description">---</p>
                             
                             <div class="project-meta">
                                 <span class="project-tech">Java, Spring Boot, SQL</span>
