--- a/Gemini Clone/index.html
+++ b/Gemini Clone/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <nav class="navbar">
-        <h3 class="navbar__logo">AsmrProg Gemini</h3>
+        <h3 class="navbar__logo">ATZ</h3>
         <!-- <img src="image/Logo ATz.png" alt="" class="logo-Atz"> -->
         <button class="navbar__button" id="themeToggler"><i class='bx bx-sun'></i></button>
     </nav>
