--- a/HTML Resume/recentActive.html
+++ b/HTML Resume/recentActive.html
@@ -74,11 +74,14 @@
   <i class="fas fa-eye"></i>
   Live Demo
 </button>
+                <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
 
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-figma"></i>
-                                    Design File
-                                </button>
                             </div>
                         </div>
                     </div>
@@ -106,10 +109,13 @@
                                     <i class="fas fa-eye"></i>
                                     Live Demo
                                 </button>
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-figma"></i>
-                                    Design File
-                                </button>
+                                <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
                             </div>
                         </div>
                     </div>
@@ -137,10 +143,13 @@
                                     <i class="fas fa-external-link-alt"></i>
                                     Live Demo
                                 </button>
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-github"></i>
-                                    Source Code
-                                </button>
+                               <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
                             </div>
                         </div>
                     </div>
@@ -168,10 +177,13 @@
                                     <i class="fas fa-external-link-alt"></i>
                                     Live Demo
                                 </button>
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-github"></i>
-                                    Source Code
-                                </button>
+                               <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
                             </div>
                         </div>
                     </div>
@@ -199,10 +211,13 @@
                                     <i class="fas fa-building"></i>
                                     Current Builds
                                 </button>
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-github"></i>
-                                    Source Code
-                                </button>
+                              <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
                             </div>
                         </div>
                     </div>
@@ -266,10 +281,13 @@
                                     <i class="fas fa-building"></i>
                                     Current Building
                                 </button>
-                                <button class="btn btn-secondary">
-                                    <i class="fab fa-github"></i>
-                                    Source Code
-                                </button>
+                               <div class="tooltip-container">
+                    <button class="btn btn-secondary disable" disabled>
+                        <i class="fab fa-github"></i>
+                        Source Code
+                    </button>
+                <span class="tooltip">Currently Disabled For Security </span>
+                </div>
                             </div>
                         </div>
                     </div>
@@ -277,6 +295,7 @@
             </div>
         </div>
     </div>
+
 
     <script>
         // DOM Elements
