began with pyton

--- a/HTML Resume/index.html
+++ b/HTML Resume/index.html
@@ -109,7 +109,7 @@
         <div class="timeline-content">
           <h3>Started Programming</h3>
           <p class="timeline-date">2021</p>
-          <p>Began my journey with basic HTML and CSS, creating simple static websites</p>
+          <p>Began my journey with basic Python Programming Language.</p>
         </div>
       </div>
       <div class="timeline-item">
